Kubernetes-Curso/Services-e-Networking/deploy-network-policy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: app
  name: app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
      role: frontend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: app
        role: frontend
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
        resources: {}
status: {}
