Kubernetes-Curso/Services-e-Networking/deployment-nodeport-exercicio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: deployment-nodeport-exercicio
  name: deployment-nodeport-exercicio
spec:
  replicas: 3
  selector:
    matchLabels:
      app: deployment-nodeport-exercicio
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: deployment-nodeport-exercicio
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
        resources: {}
status: {}
