Kubernetes-Curso/Services-e-Networking/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: app-svc
  name: app-svc
spec:
  containers:
  - image: nginx
    name: app-svc
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
